# cube

./: CMakeLists.txt
src/: Shader.h  main.cpp
src/mesh/: Cube.h  Mesh.h
src/shaders/: shader.vert
